objects/Key_Task_Dependency__c.object
<CustomObject>
    <fields>
        <fullName>Control_is_Blocked_or_On_Hold__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Control is Blocked or On Hold</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Controlling_Finish_Date__c</fullName>
        <formula>Controlling_Key_Task_to_G_A__r.Finish_Date__c</formula>
        <label>Controlling - Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Controlling_Key_Task_Status__c</fullName>
        <formula>Text(Controlling_Key_Task_to_G_A__r.Status__c)</formula>
        <label>Controlling Key Task - Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controlling_Key_Task_to_G_A__c</fullName>
        <label>Controlling Key Task to G.A.</label>
        <referenceTo>Key_Task_to_G_A__c</referenceTo>
        <relationshipLabel>Dependent Key Tasks</relationshipLabel>
        <relationshipName>Dependent_Key_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Controlling_Start_Date__c</fullName>
        <formula>Controlling_Key_Task_to_G_A__r.Start_Date__c</formula>
        <label>Controlling - Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Controlling_Team_Plan__c</fullName>
        <formula>Controlling_Key_Task_to_G_A__r.Team_Release_Plan__r.Name</formula>
        <label>Controlling Team Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Finish_Date__c</fullName>
        <formula>Dependent_Key_Task_to_G_A__r.Finish_Date__c</formula>
        <label>Dependent - Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dependent_Key_Task_Status__c</fullName>
        <formula>Text( Dependent_Key_Task_to_G_A__r.Status__c)</formula>
        <label>Dependent Key Task - Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Key_Task_to_G_A__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dependent Key Task to G.A.</label>
        <referenceTo>Key_Task_to_G_A__c</referenceTo>
        <relationshipLabel>Controlling Key Tasks</relationshipLabel>
        <relationshipName>Controlling_Key_Tasks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dependent_Start_Date__c</fullName>
        <formula>Dependent_Key_Task_to_G_A__r.Start_Date__c</formula>
        <label>Dependent - Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dependent_Team_Plan__c</fullName>
        <formula>Dependent_Key_Task_to_G_A__r.Team_Release_Plan__r.Name</formula>
        <label>Dependent Team Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_is_Blocked_or_On_Hold__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dependent is Blocked or On Hold</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Key Task Dependency</label>
    <nameField>
        <displayFormat>KTD-{0000}</displayFormat>
        <label>Key Task Dependency Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Task Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Controlling_and_Dependent_Same_Release</fullName>
        <active>true</active>
        <description>The Controlling and Dependent Key Tasks must be in the same Release Plan</description>
        <errorConditionFormula>Dependent_Key_Task_to_G_A__r.Team_Release_Plan__r.Release_Plan__c &lt;&gt;  Controlling_Key_Task_to_G_A__r.Team_Release_Plan__r.Release_Plan__c</errorConditionFormula>
        <errorDisplayField>Dependent_Key_Task_to_G_A__c</errorDisplayField>
        <errorMessage>The Controlling and Dependent Key Tasks must be within the same Release Plan</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restricted_Values_on_Number_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
Control_is_Blocked_or_On_Hold__c &lt; 0,
Control_is_Blocked_or_On_Hold__c &gt; 1, 
Dependent_is_Blocked_or_On_Hold__c &lt; 0, 
Dependent_is_Blocked_or_On_Hold__c &gt; 1
)</errorConditionFormula>
        <errorMessage>The only acceptable values for the Control is Blocked or On Hold field and the Dependent is Blocked or On Hold field are 1 or 0.</errorMessage>
    </validationRules>
</CustomObject>